--- a/paginas/artists/Alice.html
+++ b/paginas/artists/Alice.html
@@ -16,50 +16,50 @@
 <body>
   <!-- ============ HEADER ============ -->
   <header>
-  <nav class="nav" aria-label="Hoofdnavigatie">
-    <!-- Logo -->
-    <a href="../../" class="brand" aria-label="VITRIEN — Home">
-      <img src="../../assets/img/logo.png" alt="Vitrien logo">
-    </a>
+    <nav class="nav" aria-label="Hoofdnavigatie">
+      <!-- Logo -->
+      <a href="../../" class="brand" aria-label="VITRIEN — Home">
+        <img src="../../assets/img/logo.png" alt="Vitrien logo">
+      </a>
 
-    <!-- Desktop menu -->
-    <div class="menu" role="menubar">
-      <a href="../../index.html#over" data-lang-nl="Over" data-lang-en="About">Over</a>
-      <a href="../../index.html#locaties" data-lang-nl="Data & locaties" data-lang-en="Dates & Venues">Data & locaties</a>
-      <a href="../../index.html#opencall" data-lang-nl="Open call" data-lang-en="Open call">Open call</a>
-      <a href="../../index.html#kunstenaars" data-lang-nl="Kunstenaars" data-lang-en="Artists">Kunstenaars</a>
-      <a href="../../index.html#lov" data-lang-nl="LOV2030" data-lang-en="LOV2030">LOV2030</a>
-      <a href="../../index.html#contact" data-lang-nl="Contact" data-lang-en="Contact">Contact</a>
+      <!-- Desktop menu -->
+      <div class="menu" role="menubar">
+        <a href="../../index.html#over" data-lang-nl="Over" data-lang-en="About">Over</a>
+        <a href="../../index.html#locaties" data-lang-nl="Data & locaties" data-lang-en="Dates & Venues">Data & locaties</a>
+        <a href="../../index.html#opencall" data-lang-nl="Open call" data-lang-en="Open call">Open call</a>
+        <a href="../../index.html#kunstenaars" data-lang-nl="Kunstenaars" data-lang-en="Artists">Kunstenaars</a>
+        <a href="../../index.html#lov" data-lang-nl="LOV2030" data-lang-en="LOV2030">LOV2030</a>
+        <a href="../../index.html#contact" data-lang-nl="Contact" data-lang-en="Contact">Contact</a>
+      </div>
+
+      <!-- Desktop taal-switch -->
+      <div class="lang-switch desktop-only" aria-label="Taalwissel">
+        <button onclick="setLang('nl')" class="active" data-lang="nl">NL</button> |
+        <button onclick="setLang('en')" data-lang="en">EN</button>
+      </div>
+
+      <!-- Hamburger -->
+      <button class="burger" aria-label="Open menu" onclick="toggleDrawer()">
+        <span></span><span></span><span></span>
+      </button>
+    </nav>
+
+    <!-- Mobile drawer -->
+    <div class="drawer" id="drawer" aria-hidden="true">
+      <a href="../../index.html#over" data-lang-nl="Over" data-lang-en="About" onclick="toggleDrawer()">Over</a>
+      <a href="../../index.html#locaties" data-lang-nl="Data & locaties" data-lang-en="Dates & Venues" onclick="toggleDrawer()">Data & locaties</a>
+      <a href="../../index.html#opencall" data-lang-nl="Open call" data-lang-en="Open call" onclick="toggleDrawer()">Open call</a>
+      <a href="../../index.html#kunstenaars" data-lang-nl="Kunstenaars" data-lang-en="Artists" onclick="toggleDrawer()">Kunstenaars</a>
+      <a href="../../index.html#lov" data-lang-nl="LOV2030" data-lang-en="LOV2030" onclick="toggleDrawer()">LOV2030</a>
+      <a href="../../index.html#contact" data-lang-nl="Contact" data-lang-en="Contact" onclick="toggleDrawer()">Contact</a>
+
+      <!-- Mobile taal-switch -->
+      <div class="lang-switch mobile-only" aria-label="Taalwissel">
+        <button onclick="setLang('nl')" class="active" data-lang="nl">NL</button> |
+        <button onclick="setLang('en')" data-lang="en">EN</button>
+      </div>
     </div>
-
-    <!-- Desktop taal-switch -->
-    <div class="lang-switch desktop-only" aria-label="Taalwissel">
-      <button onclick="setLang('nl')" class="active" data-lang="nl">NL</button> |
-      <button onclick="setLang('en')" data-lang="en">EN</button>
-    </div>
-
-    <!-- Hamburger -->
-    <button class="burger" aria-label="Open menu" onclick="toggleDrawer()">
-      <span></span><span></span><span></span>
-    </button>
-  </nav>
-
-  <!-- Mobile drawer -->
-  <div class="drawer" id="drawer" aria-hidden="true">
-    <a href="../../index.html#over" data-lang-nl="Over" data-lang-en="About" onclick="toggleDrawer()">Over</a>
-    <a href="../../index.html#locaties" data-lang-nl="Data & locaties" data-lang-en="Dates & Venues" onclick="toggleDrawer()">Data & locaties</a>
-    <a href="../../index.html#opencall" data-lang-nl="Open call" data-lang-en="Open call" onclick="toggleDrawer()">Open call</a>
-    <a href="../../index.html#kunstenaars" data-lang-nl="Kunstenaars" data-lang-en="Artists" onclick="toggleDrawer()">Kunstenaars</a>
-    <a href="../../index.html#lov" data-lang-nl="LOV2030" data-lang-en="LOV2030" onclick="toggleDrawer()">LOV2030</a>
-    <a href="../../index.html#contact" data-lang-nl="Contact" data-lang-en="Contact" onclick="toggleDrawer()">Contact</a>
-
-    <!-- Mobile taal-switch -->
-    <div class="lang-switch mobile-only" aria-label="Taalwissel">
-      <button onclick="setLang('nl')" class="active" data-lang="nl">NL</button> |
-      <button onclick="setLang('en')" data-lang="en">EN</button>
-    </div>
-  </div>
-</header>
+  </header>
 
   <main id="top">
     <!-- ============ HERO ============ -->
@@ -67,8 +67,8 @@
       <div class="container">
         <div class="meta" data-lang-nl="Kunstenaar" data-lang-en="Artist">Kunstenaar</div>
         <h1>Alice Leens</h1>
-        <p class="lead" data-lang-nl="Beeldend kunstenaar • Mixed media • Installatie" data-lang-en="Visual artist • Mixed media • Installation">
-          Beeldend kunstenaar • Mixed media • Installatie
+        <p class="lead" data-lang-nl="Beeldend kunstenaar • Textiel • Installatie" data-lang-en="Visual artist • Textiles • Installation">
+          Beeldend kunstenaar • Textiel • Installatie
         </p>
       </div>
     </section>
@@ -87,47 +87,46 @@
       <div class="container grid two-col">
         <article>
           <div class="meta" data-lang-nl="Biografie" data-lang-en="Biography">Biografie</div>
-          <p data-lang-nl="Alice Leens (°1990) werkt met gelaagde beeldtalen waarin materiaalonderzoek en narratief een centrale rol spelen. Ze combineert found objects, textiel en verf tot installaties die balanceren tussen intimiteit en publieke ruimte. In haar praktijk onderzoekt ze hoe herinnering, tactiliteit en tijd zich vertalen naar vorm en ritme."
-             data-lang-en="Alice Leens (b. 1990) develops layered visual languages where material research and narrative take center stage. Combining found objects, textiles and paint, she creates installations that balance intimacy and public space. Her practice explores how memory, tactility and time translate into form and rhythm.">
-            Alice Leens (°1990) werkt met gelaagde beeldtalen...
+          <p
+            data-lang-nl="Alice Leens (°1990) werkt met gelaagde beeldtalen waarin materiaalonderzoek en narratief centraal staan. Ze combineert gevonden objecten, textiel en verf tot installaties die balanceren tussen intimiteit en publieke ruimte. In haar praktijk onderzoekt ze hoe herinnering, tactiliteit en tijd zich vertalen naar vorm en ritme."
+            data-lang-en="Alice Leens (b. 1990) develops layered visual languages in which material research and narrative take center stage. Combining found objects, textiles and paint, she creates installations that balance intimacy and public space. Her practice explores how memory, tactility and time translate into form and rhythm."
+          >
+            Alice Leens (°1990) werkt met gelaagde beeldtalen waarin materiaalonderzoek en narratief centraal staan...
           </p>
+
           <div class="meta" style="margin-top:20px" data-lang-nl="Praktisch" data-lang-en="Practical">Praktisch</div>
           <p>
             Website: <a class="mono-link" href="#" target="_blank" rel="noopener">https://aliceleens.com/</a><br>
-            Contact: <a class="mono-link" href="mailto:alice.leens@email.com">alice.leens@email.com</a>
+            Contact: <a class="mono-link" href="mailto:aliceleens@gmail.com">aliceleens@gmail.com</a>
           </p>
         </article>
 
         <article>
           <div class="meta" data-lang-nl="Artist statement" data-lang-en="Artist statement">Artist statement</div>
-          <p data-lang-nl="Mijn werk onderzoekt hoe materialen verhalen dragen. Door fragmenten te hergebruiken en te herordenen ontstaan constellaties die de toeschouwer uitnodigen om trager te kijken en eigen associaties te maken. Het spanningsveld tussen orde en toeval, kwetsbaarheid en stevigheid, vormt de kern van mijn installaties."
-             data-lang-en="My work examines how materials carry stories. By reusing and reordering fragments, I create constellations that invite slow looking and personal associations. The tension between order and chance, fragility and sturdiness, forms the core of my installations.">
+          <p
+            data-lang-nl="Mijn werk onderzoekt hoe materialen verhalen dragen. Door fragmenten te hergebruiken en te herordenen ontstaan constellaties die de toeschouwer uitnodigen om trager te kijken en eigen associaties te maken. Het spanningsveld tussen orde en toeval, kwetsbaarheid en stevigheid vormt de kern van mijn installaties."
+            data-lang-en="My work examines how materials carry stories. By reusing and reordering fragments, I create constellations that invite slow looking and personal associations. The tension between order and chance, fragility and sturdiness forms the core of my installations."
+          >
             Mijn werk onderzoekt hoe materialen verhalen dragen...
           </p>
         </article>
       </div>
     </section>
 
-    <!-- ============ GALLERY ============ -->
+    <!-- ============ GALLERY (9 beelden) ============ -->
     <section>
       <div class="container">
         <div class="meta" data-lang-nl="Werk" data-lang-en="Work">Werk</div>
         <div class="grid gallery">
-          <figure class="module">
-            <img src="../../assets/img/artists/Alice1.jpg" alt="Werk — Alice Leens">
-          </figure>
-          <figure class="module">
-            <img src="../../assets/img/artists/Alice2.jpg" alt="Werk — Alice Leens">
-          </figure>
-          <figure class="module">
-            <img src="../../assets/img/artists/Alice3.jpg" alt="Werk — Alice Leens">
-          </figure>
-          <figure class="module">
-            <img src="../../assets/img/artists/Alice4.jpg" alt="Werk — Alice Leens">
-          </figure>
-          <figure class="module">
-            <img src="../../assets/img/artists/Alice5.jpg" alt="Werk — Alice Leens">
-          </figure>
+          <figure class="module"><img src="../../assets/img/artists/Alice/Alice1.jpg" alt="Werk — Alice Leens"></figure>
+          <figure class="module"><img src="../../assets/img/artists/Alice/Alice2.jpg" alt="Werk — Alice Leens"></figure>
+          <figure class="module"><img src="../../assets/img/artists/Alice/Alice3.jpg" alt="Werk — Alice Leens"></figure>
+          <figure class="module"><img src="../../assets/img/artists/Alice/Alice4.jpg" alt="Werk — Alice Leens"></figure>
+          <figure class="module"><img src="../../assets/img/artists/Alice/Alice5.jpg" alt="Werk — Alice Leens"></figure>
+          <figure class="module"><img src="../../assets/img/artists/Alice/Alice6.jpg" alt="Werk — Alice Leens"></figure>
+          <figure class="module"><img src="../../assets/img/artists/Alice/Alice7.jpg" alt="Werk — Alice Leens"></figure>
+          <figure class="module"><img src="../../assets/img/artists/Alice/Alice8.jpg" alt="Werk — Alice Leens"></figure>
+          <figure class="module"><img src="../../assets/img/artists/Alice/Alice9.jpg" alt="Werk — Alice Leens"></figure>
         </div>
       </div>
     </section>
@@ -140,6 +139,7 @@
     </section>
   </main>
 
+  <!-- ============ FOOTER ============ -->
   <footer>
     <div class="footer-inner">
       <div>© <span id="year"></span> Vitrien — Leuven</div>
@@ -148,5 +148,9 @@
   </footer>
 
   <script src="../../assets/js/app.js" defer></script>
+  <script>
+    // Jaar in footer
+    document.getElementById('year').textContent = new Date().getFullYear();
+  </script>
 </body>
 </html>
