--- a/paginas/artists/Alice.html
+++ b/paginas/artists/Alice.html
@@ -96,7 +96,7 @@
 
           <div class="meta" style="margin-top:20px" data-lang-nl="Praktisch" data-lang-en="Practical">Praktisch</div>
           <p>
-            Website: <a class="mono-link" href="#" target="_blank" rel="noopener">https://aliceleens.com/</a><br>
+            Website: <a class="mono-link" href="#" target="_blank" rel="noopener">https://www.instagram.com/alice_leens/</a><br>
             Contact: <a class="mono-link" href="mailto:aliceleens@gmail.com">aliceleens@gmail.com</a>
           </p>
         </article>
