--- a/paginas/artists/Shailey.html
+++ b/paginas/artists/Shailey.html
@@ -96,25 +96,26 @@
 
     <!-- GALLERY -->
     <section>
-      <div class="container">
-        <div class="meta" data-lang-nl="Werk" data-lang-en="Work">Werk</div>
-        <div class="grid gallery">
-          <figure class="module"><img src="../../assets/img/artists/Shailey/shailey1.jpeg" alt="Werk — Shailey Shah"></figure>
-          <figure class="module"><img src="../../assets/img/artists/Shailey/shailey2.jpeg" alt="Werk — Shailey Shah"></figure>
-          <figure class="module"><img src="../../assets/img/artists/Shailey/shailey3.jpeg" alt="Werk — Shailey Shah"></figure>
-          <figure class="module"><img src="../../assets/img/artists/Shailey/shailey4.jpeg" alt="Werk — Shailey Shah"></figure>
-          <figure class="module"><img src="../../assets/img/artists/Shailey/shailey5.jpeg" alt="Werk — Shailey Shah"></figure>
-          <figure class="module"><img src="../../assets/img/artists/Shailey/shailey6.jpeg" alt="Werk — Shailey Shah"></figure>
-          <figure class="module"><img src="../../assets/img/artists/Shailey/shailey7.jpeg" alt="Werk — Shailey Shah"></figure>
-          <figure class="module"><img src="../../assets/img/artists/Shailey/shailey8.jpeg" alt="Werk — Shailey Shah"></figure>
-          <figure class="module"><img src="../../assets/img/artists/Shailey/shailey9.jpeg" alt="Werk — Shailey Shah"></figure>
-          <figure class="module"><img src="../../assets/img/artists/Shailey/shailey10.jpeg" alt="Werk — Shailey Shah"></figure>
-          <figure class="module"><img src="../../assets/img/artists/Shailey/shailey11.jpeg" alt="Werk — Shailey Shah"></figure>
-          <figure class="module"><img src="../../assets/img/artists/Shailey/shailey12.jpeg" alt="Werk — Shailey Shah"></figure>
-          <figure class="module"><img src="../../assets/img/artists/Shailey/shailey13.jpeg" alt="Werk — Shailey Shah"></figure>
-        </div>
-      </div>
-    </section>
+  <div class="container">
+    <div class="meta" data-lang-nl="Werk" data-lang-en="Work">Werk</div>
+    <div class="grid gallery">
+      <figure class="module"><img loading="lazy" src="../../assets/img/artists/Shailey/Shailey1.jpeg"  alt="Werk — Shailey Shah"></figure>
+      <figure class="module"><img loading="lazy" src="../../assets/img/artists/Shailey/Shailey2.jpeg"  alt="Werk — Shailey Shah"></figure>
+      <figure class="module"><img loading="lazy" src="../../assets/img/artists/Shailey/Shailey3.jpeg"  alt="Werk — Shailey Shah"></figure>
+      <figure class="module"><img loading="lazy" src="../../assets/img/artists/Shailey/Shailey4.jpeg"  alt="Werk — Shailey Shah"></figure>
+      <figure class="module"><img loading="lazy" src="../../assets/img/artists/Shailey/Shailey5.jpeg"  alt="Werk — Shailey Shah"></figure>
+      <figure class="module"><img loading="lazy" src="../../assets/img/artists/Shailey/Shailey6.jpeg"  alt="Werk — Shailey Shah"></figure>
+      <figure class="module"><img loading="lazy" src="../../assets/img/artists/Shailey/Shailey7.jpeg"  alt="Werk — Shailey Shah"></figure>
+      <figure class="module"><img loading="lazy" src="../../assets/img/artists/Shailey/Shailey8.jpeg"  alt="Werk — Shailey Shah"></figure>
+      <figure class="module"><img loading="lazy" src="../../assets/img/artists/Shailey/Shailey9.jpeg"  alt="Werk — Shailey Shah"></figure>
+      <figure class="module"><img loading="lazy" src="../../assets/img/artists/Shailey/Shailey10.jpeg" alt="Werk — Shailey Shah"></figure>
+      <figure class="module"><img loading="lazy" src="../../assets/img/artists/Shailey/Shailey11.jpeg" alt="Werk — Shailey Shah"></figure>
+      <figure class="module"><img loading="lazy" src="../../assets/img/artists/Shailey/Shailey12.jpeg" alt="Werk — Shailey Shah"></figure>
+      <figure class="module"><img loading="lazy" src="../../assets/img/artists/Shailey/Shailey13.jpeg" alt="Werk — Shailey Shah"></figure>
+    </div>
+  </div>
+</section>
+
 
 
     <!-- BACKLINK -->
